variables.Variables.scala.code
var x: Int = 0
while (isOverBaggle() == false) {
  forward()
  stepAmount = stepAmount + 1;
  pickupBaggle()
}
while (stepAmount != 0) {
  backward()
  stepAmount = StepAmount - 1;
}